welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: Boolean does not take parameters
if (vuBiscuit() == false) {
             ^Program:5: error: type mismatch;
 found   : Unit
 required: Boolean
avance()
      ^Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
if (vuBiscuit() == false) {
^