welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
var vuBiscuit = false
if (vuBiscuit() == false) {
avance()
}
}